package com.tsystems.iot.sdk;

//dataclass
public class Alarm {
    //code
}
