package com.tsystems.iot.sdk;

public class AxonizeAdapter implements PlatformAdapter {
    public void sendAlarm(Alarm alarm) {
        //code
    }

    public void sendMeasurement(Measurement measurement) {
        //code
    }

    public void sendEvent(Event event) {
        //code
    }
}
