package com.tsystems.iot.sdk;

public class CumulocityAdapter implements PlatformAdapter {
    public void sendAlarm(Alarm alarm) {
        //code
    }

    public void sendMeasurement(Measurement measurement) {
        //code
    }

    public void sendEvent(Event event) {
        //code
    }
}
