package com.tsystems.iot.sdk;

//dataclass
public class Event {
    //code
}
