package com.tsystems.iot.sdk;

//dataclass
public class Measurement {
    //code
}
