@startuml

title __SDK's Class Diagram__\n

  package com.tsystems.iot.sdk {
    class Alarm {
    }
  }
  

  package com.tsystems.iot.sdk {
    class AlarmApi {
        + AlarmApi()
        + sendAlarm()
    }
  }
  

  package com.tsystems.iot.sdk {
    class AxonizeAdapter {
        + sendAlarm()
        + sendMeasurement()
        + sendEvent()
    }
  }
  

  package com.tsystems.iot.sdk {
    class CumulocityAdapter {
        + sendAlarm()
        + sendMeasurement()
        + sendEvent()
    }
  }
  

  package com.tsystems.iot.sdk {
    class DeviceAgent {
        + onStart()
        + run()
        + onStop()
    }
  }
  

  package com.tsystems.iot.sdk {
    class Event {
    }
  }
  

  package com.tsystems.iot.sdk {
    class EventApi {
        + EventApi()
        + sendEvent()
    }
  }
  

  package com.tsystems.iot.sdk {
    class Measurement {
    }
  }
  

  package com.tsystems.iot.sdk {
    class MeasurementsApi {
        + MeasurementsApi()
        + sendMeasurement()
    }
  }
  

  package com.tsystems.iot.sdk {
    interface PlatformAdapter {
        {abstract} + sendAlarm()
        {abstract} + sendMeasurement()
        {abstract} + sendEvent()
    }
  }
  

  AlarmApi o-- PlatformAdapter : platformAdapter
  AxonizeAdapter -up-|> PlatformAdapter
  CumulocityAdapter -up-|> PlatformAdapter
  DeviceAgent o-- MeasurementsApi : measurementsApi
  DeviceAgent o-- EventApi : eventApi
  DeviceAgent o-- AlarmApi : alarmApi
  EventApi o-- PlatformAdapter : platformAdapter
  MeasurementsApi o-- PlatformAdapter : platformAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
